maze.randommouse.RandomMouseMaze.scala.error
Compilation error:
RandomMouseMaze:6: error: not found: value isFancingWall
      if (isFancingWall()){
          ^